scene3d/target/debug/build/eyre-4f2311ba6e8130c8/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/summerhasama/Desktop/181_3D/scene3d/target/debug/build/eyre-4f2311ba6e8130c8/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
